working/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller-svc
  #namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/server-alias: "test.tuban.me,manage.tuban.me,tuban.me, profdrivers.co.uk, profdrivers.com "
    #nginx.ingress.kubernetes.io/auth-tls-secret: "default/tls-cert-sec"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    cert-manager.io/issuer: "letsencrypt-production" 
spec:
  #ingressClassName: nginx
  defaultBackend:
    service:
      name: hello-svc
      port:
        number: 5552
  tls:
    - hosts: 
      - profdrivers.co.uk
      - prof-drivers.co.uk
      - profdrivers.com
      - prof-drivers.com
      - proffessional-drivers.co.uk
      - proffessional-drivers.uk
      - khaliltuban.co.uk
      - tuban.me
      - test.tuban.me
      - manage.tuban.me
      secretName: tls-cert-sec
  rules:
  - host: test.tuban.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-svc
            port:
              number: 5554
  - host: profdrivers.co.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-svc
            port: 
              number: 5552
  - host: prof-drivers.co.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-svc
            port: 
              number: 5552
  - host: profdrivers.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-svc
            port: 
              number: 5552
  - host: tuban.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-svc
            port: 
              number: 5552
